--- a/style/addbtmusic.css
+++ b/style/addbtmusic.css
@@ -8,14 +8,14 @@ body{
     user-select: none;
 }
 header{
-    height: 100px;
+    height: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100vw;
 }
 .body{
-    height: calc(100vh - 100px);
+    height: calc(100vh - 60px);
     overflow: auto;
     width: 100vw;
     display: flex;
@@ -25,7 +25,7 @@ header{
 }
 audio{
     width: 350px;
-    margin-top: 35px;
+    margin-top: 17.5px;
 }
 figure{
     max-width: 350px;
@@ -39,22 +39,22 @@ figcaption{
     display: flex;
     width: auto;
     flex-direction: row;
-    margin-top: 25px;
+    margin-top: 12.5px;
 }
 .verifbuttons input[type="submit"]{
-    padding: 20px;
+    padding: 10px;
     border: none;
     border-radius: 6.25px;
     cursor: pointer;
     font-weight: bold;
-    font-size: 16pt;
+    font-size: 12pt;
 }
 .formverif input[type="submit"]{
     background-color: darkgreen;
     color: white;
     cursor: pointer;
-    padding: 20px 50px 20px 50px;
-    margin: 0 20px 0 20px;
+    padding: 10px 25px 10px 25px;
+    margin: 0 20px;
 }
 .formdecr input[type="submit"], .formincr input[type="submit"]{
     background-color: #007bff;
@@ -66,7 +66,7 @@ figcaption{
     cursor: auto;
 }
 .queryform input[type="text"]{
-    height: 65px;
+    height: 45px;
     width: 1000px;
     border-radius: 50px;
     font-size: 20pt;
@@ -75,4 +75,7 @@ figcaption{
 }
 .songid{
     user-select: all;
+}
+img {
+    width: 350px;
 }
